2012-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* Merged blocktree branch.

2012-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c:
	  Handle emission of long long constants.
	  Emit error message for unknown sizes instead of failing silently.

2012-12-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c,
	* sdcc_vc.h.in: moved strto(u)ll macros and fixed warnings

2012-12-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglue.c (emitOverlay): fixed bug #3596899
	* support/regression/tests/gcc-tortue-execute-20021118-2.c:
	  re-enabled test (fixed by my 2012-12-26 commit)

2012-12-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c: inserted macros for strtoll and strtoull

2012-12-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y,
	* src/SDCCsymt.c,
	* src/SDCCsymt.h,
	* src/SDCCast.c,
	* src/SDCCast.h: Fixed some scope related bugs including
	  #3190029 (improved previous fix), #3513308, and #3511513
	* support/regression/tests/gcc-torture-execute-960116-1.c:
	  re-enabled test

2012-12-26 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/binutils/configure.in,
	  support/sdbinutils/binutils/configure:
	  fixed bug #3527589 - "Build fails on archlinux ppc"

2012-12-25 Borut Razem <borut.razem AT gmail.com>

	* src/pic14/gen.c, src/pic14/main.c:
	  applied patch #3193179 - "pic14 naked ISR handler"
	  implementing RFE #1432077 - "naked for pic14",
	  thanks to Wolfgang Jung

2012-12-23 Vaclav Peroutka <vaclavpe AT seznam.cz>

   * sim/ucsim/configure
     sim/ucsim/configure.in
     sim/ucsim/main_in.mk
     sim/ucsim/packages_in.mk
     sim/ucsim/stypes.h
     sim/ucsim/st7.src/(c).1
     sim/ucsim/st7.src/Makefile.in
     sim/ucsim/st7.src/clean.mk
     sim/ucsim/st7.src/conf.mk
     sim/ucsim/st7.src/glob.cc
     sim/ucsim/st7.src/glob.h
     sim/ucsim/st7.src/inst.cc
     sim/ucsim/st7.src/instcl.h
     sim/ucsim/st7.src/regsst7.h
     sim/ucsim/st7.src/simst7.cc