@@ -1,3 +1,8 @@
+2012-12-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc2.cc:
+	  Infrastructure for STM8 port.
+
 2012-12-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* Merged blocktree branch.
